[project]
name = "chef-claude"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[anthropic,images,silero,turn-detector]~=1.3",
    "livekit-plugins-cartesia~=1.3",
    "livekit-plugins-deepgram~=1.3",
    "livekit-plugins-elevenlabs~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.1",
]
